--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -1002,7 +1002,6 @@ def findDuplicate(nums: List[int]) -> int:
 哈希表在存储时存在一个连续的存储空间中，在查找时根据 key 直接通过哈希算法计算出存储的地址。
 
 
-
 ### 子集问题
 
 问一个集合 m 是否包含了另一个集合 n
@@ -1127,7 +1126,6 @@ def threeSum(arr, target):
 
 ```python
 def countSum(arr, target):
-	#code here
 	freq = {}
 	n = len(arr)
 	cnt = 0
@@ -1156,23 +1154,22 @@ def countSum(arr, target):
 def check4Sum(arr, target):
     n = len(arr)
 
-    # Store sums of all pairs in a hash map
+    # 储存所有数字对之和
     mp = {}
     for i in range(n - 1):
         for j in range(i + 1, n):
             mp[arr[i] + arr[j]] = (i, j)
 
-    # Traverse through all pairs and search for 
-    # target - (current pair sum)
+    # 遍历所有数字对
     for i in range(n - 1):
         for j in range(i + 1, n):
             sum_val = arr[i] + arr[j]
 
-            # If target - sum is present in the hash map
+            # 如果 target - sum 在哈希表中
             if target - sum_val in mp:
                 p = mp[target - sum_val]
-
-                # Check that all elements are different array elements 
+                
+                # 检查元素位置是否不同
                 if p[0] != i and p[0] != j and p[1] != i and p[1] != j:
                     return True
 
@@ -1180,9 +1177,55 @@ def check4Sum(arr, target):
 ```
 
 
+上面求出的答案会出现重复，如果要求答案不重复，还是用排序双指针来做，再加上一些剪枝
+
+```python
+def fourSum(nums, target):
+	n = len(nums)
+	nums.sort()
+	res = []
+
+	for i in range(n-3):
+		if i > 0 and nums[i] == nums[i-1]:
+			continue
+		
+		# 如果 nums[i] 和后三个数相加仍小于target，无需继续
+		if nums[i] + nums[n- 3] + nums[n - 2] + nums[n - 1] < target:
+			continue
+
+		for j in range(i+1, n-2):
+			if j > i + 1 and nums[j] == nums[j-1]:
+				continue
+			# 如果前四个数已经超过目标值，无需后续判断
+			if nums[i] + nums[i + 1] + nums[i + 2] + nums[i + 3] > target:
+				break
+			
+			nt = target - nums[i] - nums[j]
+
+			l = j + 1
+			r = n - 1
+			while l < r:
+				if nums[l] + nums[r] == nt:
+					res.append([nums[i], nums[j], nums[l], nums[r]])
+					l += 1
+					r -= 1
+					# 避免重复
+					while l < r and nums[l] == nums[l-1]:
+						l += 1
+
+					while r > l and nums[r] == nums[r + 1]:
+						r -= 1
+				elif nums[l] + nums[r] > nt:
+					r -= 1
+				else:
+					l += 1
+	return res
+```
+
+
 ### 最长子序列之和被K整除
 
-对于一个序列，找到其中的一个最长子序列，使其之和能被 K 整除
+对于一个序列，找到其中的一个最长子序列，使其之和能被 K 整除。
 
 使用一个hash（实际上是字典）保存前缀和及其对应位置
 
@@ -1211,7 +1254,7 @@ def longestSubarrayDivK(arr, k):
     return res
 ```
 
-存储所有前缀和出现的位置，这样如何再次出现这个前缀和，就证明这两个前缀和中间的序列之和能被 K 整除。
+存储所有前缀和出现的位置，这样如果再次出现这个前缀和，就证明这两个前缀和中间的序列之和能被 K 整除。
 
 
 ### 最长子序列之和为 K
@@ -1232,7 +1275,7 @@ def subarraySum(arr, target):
 		if s - target in prefixs:
 			return [prefixs[s - target]+1, i+1]
 		
-		prefixs[s] = i+1
+		prefixs[s] = i + 1
 	return [-1]
 ```
 
@@ -1266,8 +1309,10 @@ def longestConsecutive(nums) -> int:
 
 [Find all pairs (a, b) in an array such that a % b = k - GeeksforGeeks](https://www.geeksforgeeks.org/find-pairs-b-array-b-k/)
 
-首先进行如下分析
+分成两种情况，这两种情况可以同时存在
 
++ 如果 k 在数组中，并且存在比k大的数，那么存在一个序列对
++ 如果一个数大于k，进行如下分析
 $$
 \eqalign{
   & a\% b = k  \cr 
@@ -1303,24 +1348,19 @@ def printPairs(arr, k):
 	for num in arr:
 		occ[num] = True
 
-	isPairFound = False
-
 	# 遍历数组中的元素
 	for num in arr:
-		# 如果 k 在数组中，并且某个元素小于k，那么存在一个序列对
+		# 如果 k 在数组中，并且某个元素大于k，那么存在一个序列对
 		if k in occ and k < num:
 			ans += 1
-			isPairFound = True
 
 		# 如果这个元素大于等于k
 		if num >= k:
 			divisors = findDivisors(num - k)
 			for divisor in divisors:
-				# if num modulo divisor is equal to k, num is not equal to divisor
-				# and divisor exists in the hashmap
+				# 如果num % divisor = k，并且 num 不等于 divisor，divisor存在于数组中
 				if num % divisor == k and num != divisor and divisor in occ:
 					ans += 1
-					isPairFound = True
 
 	return ans
 ```
@@ -1332,15 +1372,10 @@ def printPairs(arr, k):
 
 一般的做法是，通过两个循环，外部循环遍历序列左端，内部序列遍历序列的右端，判断是否存在所有的不重复元素
 
-利用滑动窗口解决这一问题
-
-只使用一个循环来遍历序列左端，通过一个字典来记录窗口内所有元素的出现频次，通过一个遍历记录窗口内不重复元素的数量。
-
-如果窗口大小等于不重复元素数量，那么右端所有的子序列都包含了所有不重复元素
+可以使用滑动窗口解决这一问题，先固定左端，再将右端移动至包含所有的不重复元素的位置（判断是否包含所有不重复元素时，可以用一个变量表示不重复元素的数量）。此时右端所有的子序列都包含了所有不重复元素。然后向右移动左端，并更新不重复元素的数量。
 
 ```python
 def countDistinctSubarray(self,arr, n): 
-	#code here.
 	uset = set(arr)
 	k = len(uset)  # 不重复元素的数量
 	window = 0  # 记录窗口内不重复元素的数量
@@ -1355,7 +1390,7 @@ def countDistinctSubarray(self,arr, n):
 			if vid[arr[right]] == 1:
 				window += 1
 			right += 1
-
+		# 如果当前窗口的不重复元素满足要求，则后面所有的连续子序列都满足要求
 		if window == k:
 			cnt += n - right + 1
 
@@ -1373,7 +1408,9 @@ def countDistinctSubarray(self,arr, n):
 
 [169. 多数元素 - 力扣（LeetCode）](https://leetcode.cn/problems/majority-element/description/)
 
-如果要求空间复杂度为1，并且必定存在多数元素，那么可以将多数元素看为1类，其它元素看为另一类，这样只需要对多数元素计数即可
+如果要求空间复杂度为1，并且必定存在多数元素，可以使用 Boyer-Moore 投票算法，将多数元素看为一类，其它元素看为另一类。
+
+初始时，假定序列最开始的元素为多数元素 `maj`，设置一个计数器 `cnt`。遍历序列，如果遍历元素 `a` 等于当前多数元素 `maj`，则 `cnt` 加1，否则 `cnt` 减1，当计数重新为0时，更新多数元素。在上述过程中，当 `cnt` 为0时，证明当前所选的 `maj` 并不能满足多数元素的条件，并且之前的所有元素都不能满足，因此需要挑选一个新元素作为 `maj`。
 
 ```python
 def majorityElement(nums) -> int:
@@ -1390,6 +1427,53 @@ def majorityElement(nums) -> int:
 ```
 
 
+如果是找出出现次数大于 `n/3` 的所有元素，[229. 多数元素 II - 力扣（LeetCode）](https://leetcode.cn/problems/majority-element-ii/description/)
+
+该问题也可以用Boyer-Moore 投票方法
+
+```python
+def majorityElement(nums: List[int]) -> List[int]:
+	ans = []
+	element1, element2 = 0, 0
+	vote1, vote2 = 0, 0
+
+	for num in nums:
+		# 如果该元素为第一个元素，则计数加1
+		if vote1 > 0 and num == element1:
+			vote1 += 1
+		# 如果该元素为第二个元素，则计数加1
+		elif vote2 > 0 and num == element2:
+			vote2 += 1
+		# 选择第一个元素
+		elif vote1 == 0:
+			element1 = num
+			vote1 += 1
+		# 选择第二个元素
+		elif vote2 == 0:
+			element2 = num
+			vote2 += 1
+		# 如果三个元素均不相同，则相互抵消1次
+		else:
+			vote1 -= 1
+			vote2 -= 1
+
+	cnt1, cnt2 = 0, 0
+	for num in nums:
+		if vote1 > 0 and num == element1:
+			cnt1 += 1
+		if vote2 > 0 and num == element2:
+			cnt2 += 1        
+	# 检测元素出现的次数是否满足要求
+	if vote1 > 0 and cnt1 > len(nums) / 3:
+		ans.append(element1)
+	if vote2 > 0 and cnt2 > len(nums) / 3:
+		ans.append(element2)
+
+	return ans
+```
+
+
+
 ### 多数元素大于K的最长子序列
 
 [Longest Subarray having Majority Elements Greater Than K - GeeksforGeeks](https://www.geeksforgeeks.org/length-of-longest-subarray-in-which-elements-greater-than-k-are-more-than-elements-not-greater-than-k/?ref=rp)
@@ -1400,7 +1484,6 @@ def majorityElement(nums) -> int:
 
 ```python
 def longestSubarray(arr, k):
-	# Code Here
 	n = len(arr)
 	preidx = {}
 	s = 0
@@ -1411,7 +1494,7 @@ def longestSubarray(arr, k):
 			s -= 1
 		if s not in preidx:
 			preidx[s] = i
-	
+	# -n 在 preidx 中证明所有元素都小于k，无需继续
 	if -n in preidx:
 		return 0
 	
@@ -1453,7 +1536,7 @@ def minRange(arr, n, k):
 	# 初始化左右两侧
 	l, r = 0, n 
 	i = 0
-	j = -1 # Initialize right side 
+	j = -1
 	
 	hm = defaultdict(lambda:0)   # 存储不同元素的出现频次
 	while i < n: 
@@ -1508,8 +1591,6 @@ def minRange(arr, n, k):
 
 ```python
 def calculateFraction(a, b):
-  
-    # If the numerator is zero, answer is "0"
     if a == 0:
         return "0"
         
@@ -1518,12 +1599,12 @@ def calculateFraction(a, b):
     a = abs(a)
     b = abs(b)
 
-    # Calculate and Append the part before decimal point
+    # 计算非小数部分
     res += str(a // b)
 
     rem = a % b
 
-    # If completely divisible, return res
+    # 完全可除，返回结果
     if rem == 0:
         return res
 
@@ -1540,7 +1621,7 @@ def calculateFraction(a, b):
         mp[rem] = len(res)
 
         rem = rem * 10
-        # Calculate quotient, append it to result and calculate next remainder
+        
         res += str(rem // b)
         rem = rem % b
 
@@ -1558,7 +1639,6 @@ def calculateFraction(a, b):
 
 ```python
 def LongestBitonicSequence(n : int, arr) -> int:
-	# code here
 	def lis(arr):
 		n = len(arr)
 		dp = [1] * n
@@ -1579,11 +1659,30 @@ def LongestBitonicSequence(n : int, arr) -> int:
 	return max_len
 ```
 
-
 如果严格增加1或减小1，有更简单的解决方法
 
 [Length of longest strict bitonic subsequence - GeeksforGeeks](https://www.geeksforgeeks.org/length-longest-strict-bitonic-subsequence/)
 
+用字典保存之前出现过的数字及其最长递增，递减长度，再额外设置一个数组保存每个位置的最长递增，递减长度
+
+```python
+def longLenStrictBitonicSub(arr, n):
+    inc, dec = defaultdict(int), defaultdict(int)
+    len_inc, len_dec = [0] * n, [0] * n  # 保存每个位置的最长递增，递减序列长度
+    for i in range(n):
+        # 判断 arr[i] - 1 是否在之前的序列中出现，不存在返回0
+        l = inc[arr[i] - 1] 
+        inc[arr[i]] = len_inc[i] = l + 1
+    
+    for i in range(n-1, -1, -1):
+        l = dec[arr[i] - 1]
+        dec[arr[i]] = len_dec[i] = l + 1
+        
+    max_len = 0
+    for i in range(n):
+        max_len = max(max_len, len_inc[i] + len_dec[i] - 1)
+    return max_len
+```
 
 
 ### 找到相同的子树
@@ -1625,6 +1724,35 @@ def printAllDups(root):
 
 [Find if there is a rectangle in binary matrix with corners as 1 - GeeksforGeeks](https://www.geeksforgeeks.org/find-rectangle-binary-matrix-corners-1/)
 
+在一个大矩阵中找到所有角点均为 1 的小矩阵
+
+一般的方法是直接枚举行和列的组合，这种方法时间复杂度过高，可以使用哈希表来降低复杂度。这个哈希表用来储存每行两列元素全为1的组合，如 j 列 和 k 列元素为1，则 `table[j]` 添加 k，即对于第 `j` 列，第 `k` 列是为1的，对应的 `table[k]` 添加 `j` 
+
+只需要遍历一次行，然后枚举列的组合。每次遍历行时，如果两列 `j` 和 `k` 对应的值均为1，则判断 `k` 是否位于 `table[j]`，或者 `j` 是否位于 `table[k]`
+
+```python
+def ValidCorner(matrix): 
+	from collections import defaultdict
+	table = defaultdict(set)
+	m = len(matrix)
+	n = len(matrix[0])
+	for i in range(m):
+		for j in range(n-1):
+			for k in range(j+1, n):
+				if matrix[i][j] != 1 or matrix[i][k] != 1:
+					continue
+				# 如果当前行的 j 列和 k 列元素均为1
+				# 则考虑历史行中是否存在 j 列和 k 列元素均为0
+				if j in table and k in table[j]:
+					return True
+				if k in table and j in table[k]:
+					return True
+				
+				table[j].add(k)
+				table[k].add(j)
+	return False
+```
+
 
 
 ## 搜索问题
@@ -1635,20 +1763,20 @@ def printAllDups(root):
 
 ```python
 def sentinelSearch(arr, n, key):
-
-    # Last element of the array
+	# 保存最后一个元素
     last = arr[n - 1]
 
-    # Element to be searched is placed at the last index
+    # 要搜索的元素放在末尾
     arr[n - 1] = key
     i = 0
 
     while (arr[i] != key):
         i += 1
 
-    # Put the last element back
+    # 恢复最后一个元素
     arr[n - 1] = last
-
+    
+	# 如果没有到达最后一个元素就找到，或者就是最后那个元素
     if ((i < n - 1) or (arr[n - 1] == key)):
         print(key, "is present at index", i)
     else:
@@ -1667,13 +1795,10 @@ def binarySearch(arr, low, high, x):
 
         if arr[mid] == x:
             return mid
-            
         elif arr[mid] < x:
             low = mid + 1
-
         else:
             high = mid - 1
-
     return -1
 ```
 
@@ -1718,31 +1843,21 @@ def br(arr, x):
 def ternarySearch(l, r, key, ar):
     while r >= l:
         
-        # Find mid1 and mid2
         mid1 = l + (r-l) // 3
         mid2 = r - (r-l) // 3
-
-        # Check if key is at any mid
+        
         if key == ar[mid1]:
             return mid1
         if key == ar[mid2]:
             return mid2
-
-        # Since key is not present at mid, 
-        # Check in which region it is present
-        # Then repeat the search operation in that region
+		# 如果key位于mid右边
         if key < ar[mid1]:
-            # key lies between l and mid1
             r = mid1 - 1
         elif key > ar[mid2]:
-            # key lies between mid2 and r
             l = mid2 + 1
         else:
-            # key lies between mid1 and mid2
             l = mid1 + 1
             r = mid2 - 1
-
-    # key not found
     return -1
 ```
 
@@ -1756,28 +1871,42 @@ def ternarySearch(l, r, key, ar):
 快速选择算法基于快速排序算法，partition的部分一致，只是在后续搜索时有差别，当找到pivot的位置时，比较该位置左侧是否包含了k-1个数，如果包含了，那么pivot就是需要的数，如果左侧大于k-1个数，就在左侧找，否则在右侧找。
 
 ```python
+def partition(arr, l, r):
+    pivot = arr[l]
+    index = l
+    i, j = l, r
+
+    while i < j:
+        while i < j:  # 先处理右侧
+            if arr[j] < pivot:
+                arr[index] = arr[j]
+                index = j
+                break
+            j -= 1
+        while i < j:
+            if arr[i] > pivot:
+                arr[index] = arr[i]
+                index = i
+                break
+            i += 1
+        
+    arr[index] = pivot
+    return index
+
 def kthSmallest(arr, l, r, k):
+	# 分割数组
+	index = partition(arr, l, r)
 
-    # if k is smaller than number of elements in array
-    if (k > 0 and k <= r - l + 1):
+	# 如果位置和 k 相等
+	if (index == k - 1):
+		return arr[index]
 
-        # Partition the array around last
-        # element and get position of pivot
-        # element in sorted array
-        index = partition(arr, l, r)
+	# index 左侧元素数量超过了 k，在左边寻找
+	if (index > k - 1):
+		return kthSmallest(arr, l, index - 1, k)
 
-        # if position is same as k
-        if (index - l == k - 1):
-            return arr[index]
-
-        # If position is more, recur for left subarray 
-        if (index - l > k - 1):
-            return kthSmallest(arr, l, index - 1, k)
-
-        # Else recur for right subarray 
-        return kthSmallest(arr, index + 1, r, 
-                            k - index + l - 1)
-    print("Index out of bound")
+	# 否则在右边寻找，注意 k 要减去左边元素的数量
+	return kthSmallest(arr, index + 1, r, k)
 ```
 
 ### 在旋转后的排序数组中搜索
@@ -1787,10 +1916,10 @@ def kthSmallest(arr, l, r, k):
 对于一个排好序的数组，如果进行了部分循环移位，在这种数组进行搜索
 
 1、使用两次二分搜索，第一次搜索最小值的位置，再根据最小值的位置进行二分搜索
-2、在上面搜索最小值时，已经用了这样的原理，即mid左侧或者右侧的数组必定有一侧是排好序的，如对于左侧，只要 `arr[low]<arr[mid]` 那么就是排好序的，如果key落在`arr[low]` 和 `arr[high]` 这个范围之内，就在左侧找，反之就在右侧找。 
+2、在上面搜索最小值时，已经用了这样的原理，即 mid 左侧或者右侧的数组必定有一侧是排好序的，如对于左侧，只要 `arr[low]<arr[mid]` 那么就是排好序的，如果 key 落在`arr[low]` 和 `arr[high]` 这个范围之内，就在左侧找，反之就在右侧找。 
 
 ```python
-def search(self, arr: List[int], target: int) -> int:
+def search(arr: List[int], target: int) -> int:
 	n = len(arr)
 	l, r = 0, n - 1
 
@@ -1821,14 +1950,14 @@ def search(self, arr: List[int], target: int) -> int:
 ```
 
 
-在旋转后的数组中找到最小值
+### 在旋转后的数组中找到最小值
 
 [153. 寻找旋转排序数组中的最小值 - 力扣（LeetCode）](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/)
 
-如果 `arr[mid]>arr[r]` 证明右半部分出现了乱序，那么最小值在右半部分，设置 `l=mid+1`，反之左半部分，为了避免mid指向的就是最小值所以设置 `h = mid`
+如果 `arr[mid]>arr[r]` 证明右半部分出现了乱序，那么最小值在右半部分，设置 `l=mid+1`，反之在左半部分，为了避免 mid 指向的就是最小值所以设置 `h = mid`
 
 ```python
-def findMin(nums: List[int]) -> int:
+def findMin(nums):
 	n = len(nums)
 	l, r = 0, n - 1
 	while l <= r:
@@ -1855,30 +1984,23 @@ def findMin(nums: List[int]) -> int:
 ```python
 def findCloset(A, B, C, p, q, r):
     diff = 1e9
-    res_i = 0
-    res_j = 0
-    res_k = 0
-    # Traverse Array
-    i = 0
-    j = 0
-    k = 0
+    res_i, res_j, res_k = 0, 0, 0   # 保存结果
+	i, j, k = 0, 0, 0
+	
     while(i < p and j < q and k < r):
-        # Find minimum and maximum of current three elements
+        
         minimum = min(A[i], min(B[j], C[k]))
         maximum = max(A[i], max(B[j], C[k]));
  
-        # Update result if current diff is
-        # less than the min diff so far
+        # 如果目前差距小于最小差距
         if maximum-minimum < diff:
-            res_i = i
-            res_j = j
-            res_k = k
+            res_i, res_j, res_k = i, j, k
             diff = maximum - minimum;
 
         if diff == 0:
             break
             
-        # Increment index of array with smallest value
+        # 移动最小元素的指针
         if A[i] == minimum:
             i = i+1
         elif B[j] == minimum:
@@ -1894,38 +2016,32 @@ https://www.geeksforgeeks.org/median-of-two-sorted-arrays
 
 一种方法是使用归并排序中的归并方法
 
-另一种方法是使用二分搜索
-
-这里的二分搜索需要利用到中位数的一个性质，对于一个长度为 2n 的数组，中位数之前需要有n-1个数，因此如果确定了一个数组的mid，另一种数组的mid可以设置为 n-mid，这里的mid并不指一个元素，而是两个元素之间的边界，mid两边的元素分为记为`l`和`r`，只要满足两个数组的 `l` 和 `r` 相互交叉即可。
+另一种方法是使用二分搜索，这里的二分搜索需要利用到中位数的一个性质，对于一个长度为 2n 的数组，中位数之前需要有 n-1 个数，因此如果确定了一个数组的 mid，另一种数组的 mid可以设置为 n-mid，这里的 mid 并不指一个元素，而是两个元素之间的边界，mid两边的元素分为记为`l`和`r`，只要满足两个数组的 `l` 和 `r` 相互交叉即可。
 
 ```python
 def getMedian(a, b):
     n = len(a)
-    
-    # We can take [0...n] number of elements from a[]
     low, high = 0, n
     
     while low <= high:
       
-        # Take mid1 elements from a
+        # 数组 a 的中点
         mid1 = low + (high - low) // 2
         
-        # Take mid2 elements from b
+        # 数组 b 的中点
         mid2 = n - mid1
         
-        # Find elements to the left and right of partition in a
+        # 确定中点两边的元素
         l1 = float('-inf') if mid1 == 0 else a[mid1 - 1]
         r1 = float('inf') if mid1 == n else a[mid1]
         
-        # Find elements to the left and right of partition in b
         l2 = float('-inf') if mid2 == 0 else b[mid2 - 1]
         r2 = float('inf') if mid2 == n else b[mid2]
         
-        # If it is a valid partition
+        # 如果存在合理划分
         if l1 <= r2 and l2 <= r1:
             return (max(l1, l2) + min(r1, r2)) / 2.0
-        
-        # If we need to take fewer elements from a
+	    
         if l1 > r2:
             high = mid1 - 1    
         else:
@@ -1935,7 +2051,7 @@ def getMedian(a, b):
 ```
 
 
-如果两个数组大小不相同，也可以按照这种方法
+如果两个数组大小不相同，也可以按照这种方法，不过需要处理一边数据过多时的情况
 
 ```python
 def findMedianSortedArrays(self, nums1, nums2) -> float:
@@ -1992,8 +2108,7 @@ def binarySearch(arr, l, r, x):
 
         mid = int(l + (r - l) / 2)
 
-        # If the element is present at one
-        # of the middle 3 positions
+        # 判断目标值是否在mid，mid-1和mid+1这三个位置
         if (arr[mid] == x):
             return mid
         if (mid > l and arr[mid - 1] == x):
@@ -2001,15 +2116,11 @@ def binarySearch(arr, l, r, x):
         if (mid < r and arr[mid + 1] == x):
             return (mid + 1)
 
-        # If element is smaller than mid, then
-        # it can only be present in left subarray
         if (arr[mid] > x):
             return binarySearch(arr, l, mid - 2, x)
 
-        # Else the element can only be present in right subarray
         return binarySearch(arr, mid + 2, r, x)
-
-    # We reach here when element is not present in array
+        
     return -1
 ```
 
@@ -2035,7 +2146,6 @@ def selection_sort(arr):
         min_idx = i
         for j in range(i + 1, n):
             if arr[j] < arr[min_idx]:
-                # Update min_idx if a smaller element is found
                 min_idx = j
         arr[i], arr[min_idx] = arr[min_idx], arr[i]
 ```
@@ -2049,16 +2159,16 @@ def selection_sort(arr):
 def bubbleSort(arr):
     n = len(arr)
     
-    # Traverse through all array elements
+    # 遍历数组
     for i in range(n):
         swapped = False
 
-        # Last i elements are already in place
+        # 最后的 i 个值已经放好了
         for j in range(0, n-i-1):
             if arr[j] > arr[j+1]:
                 arr[j], arr[j+1] = arr[j+1], arr[j]
                 swapped = True
-        if (swapped == False):
+        if swapped == False:
             break
 ```
 
@@ -2072,10 +2182,7 @@ def insertionSort(arr):
     for i in range(1, len(arr)):
         key = arr[i]
         j = i - 1
-
-        # Move elements of arr[0..i-1], that are
-        # greater than key, to one position ahead
-        # of their current position
+		# 如果 key 小于 arr[i]，向后移动
         while j >= 0 and key < arr[j]:
             arr[j + 1] = arr[j]
             j -= 1
@@ -2089,13 +2196,14 @@ def insertionSort(arr):
 
 将数组看成是完全二叉树，对于一个长度为n的数组，根节点位于0，i 节点的左节点位于2i+1，右节点位于2i+2。
 
-然后创建一个最大堆：保证父节点比子节点大，如果子节点比父节点大，就交换子节点和父节点。
+创建一个最大堆：保证父节点比子节点大，如果子节点比父节点大，就交换子节点和父节点。
 
-将最大的元素与未排序的数组最后一位交换，然后继续创建最大堆
+排序：将最大的元素与未排序的数组最后一位交换，然后继续创建最大堆。
 
-下面是实现
+下面是堆排序的实现过程
 
 ```python
+# 建立最大堆
 def heapify(arr, n, i):
     largest = i     # 根节点
     l = 2 * i + 1   # 左子节点
@@ -2116,10 +2224,12 @@ def heapSort(arr):
     # 从最下层开始
     for i in range(n // 2 - 1, -1, -1):
         heapify(arr, n, i)
-
+	# 此时排列完，最大的元素在数组的开始
+	
+	# 下面逐步将最大的元素放到末尾
     for i in range(n-1, 0, -1):
         arr[i], arr[0] = arr[0], arr[i]
-        heapify(arr, i, 0)
+        heapify(arr, i, 0)  # 将最大元素放在数组开始
 ```
 
 
@@ -2138,20 +2248,20 @@ def heapSort(arr):
 
 ```python
 def partition(arr, l, r):
-
     i = l
     j = r
 
     pivit = arr[l]
     index = l
     while i < j:
+		# 在右侧找到小于pivot的值
         while j > i:
             if arr[j] < pivit:
                 arr[index] = arr[j]
                 index = j
                 break
             j -= 1
-        
+        # 在左侧找到大于pivot的值
         while j > i:
             if arr[i] > pivit:
                 arr[index] = arr[i]
@@ -2223,46 +2333,35 @@ def partition(arr, l, r):
 def countingSort(arr, exp1):
 
     n = len(arr)
-    # The output array elements that will have sorted arr
     output = [0] * (n)
 
-    # initialize count array as 0
     count = [0] * (10)
-
-    # Store count of occurrences in count[]
+	# 统计出现频次
     for i in range(0, n):
         index = arr[i] // exp1
         count[index % 10] += 1
 
-    # Change count[i] so that count[i] now contains actual
-    # position of this digit in output array
+    # 使count[i]包含之前的元素
     for i in range(1, 10):
         count[i] += count[i - 1]
 
-    # Build the output array
+    # 建立输出数组
     i = n - 1
     while i >= 0:
         index = arr[i] // exp1
         output[count[index % 10] - 1] = arr[i]
         count[index % 10] -= 1
         i -= 1
-
-    # Copying the output array to arr[],
-    # so that arr now contains sorted numbers
+    
     i = 0
     for i in range(0, len(arr)):
         arr[i] = output[i]
 
-# Method to do Radix Sort
-
 def radixSort(arr):
 
-    # Find the maximum number to know number of digits
     max1 = max(arr)
 
-    # Do counting sort for every digit. Note that instead
-    # of passing digit number, exp is passed. exp is 10^i
-    # where i is current digit number
+    # 对每一位进行计数排序
     exp = 1
     while max1 / exp >= 1:
         countingSort(arr, exp)
@@ -2296,7 +2395,7 @@ def segregate0and1(arr):
             hi -= 1
 ```
 
-或者另一种方法，见下面分割奇偶数
+或者另一种方法，见下面分割奇偶数，一个指针指向数组末尾，用一个指针遍历数组，发现奇数就和末尾的指针交换，同时末尾的指针向左移动一步
 
 ```python
 def segregateevenandodd(arr):
@@ -2309,7 +2408,6 @@ def segregateevenandodd(arr):
         else:
             arr[l], arr[r] = arr[r], arr[l]
             r -= 1
-    m = e + 1 if (arr[e] & 1) == 0 else e  # m 位置为偶数
 ```
 
 
@@ -2333,7 +2431,7 @@ def sortColors(nums: List[int]) -> None:
 			p1 += 1
 		elif nums[i] == 0:
 			nums[i], nums[p0] = nums[p0], nums[i]
-			if p0 < p1:
+			if p0 < p1:  # 将 1 交换出去了，现在要交换回来
 				nums[i], nums[p1] = nums[p1], nums[i]
 			p0 += 1
 			p1 += 1
@@ -2349,15 +2447,14 @@ def sortColors(nums: List[int]) -> None:
 
 ```python
 def sortInWave(arr, n):
-
-    # Traverse all even elements
+	# 遍历偶数位元素
     for i in range(0, n , 2):
 
-        # If current even element is smaller than previous
+        # 偶数位元素小于之前的奇数位元素
         if (i > 0 and arr[i] < arr[i-1]):
             arr[i], arr[i-1] = arr[i-1], arr[i]
 
-        # If current even element is smaller than next
+        # 偶数位元素小于之后的奇数位元素
         if (i < n-1 and arr[i] < arr[i+1]):
             arr[i], arr[i+1] = arr[i+1], arr[i]
 ```
@@ -2411,7 +2508,6 @@ def merge_lists(lists):
     return min_heap
 
 def external_sort(array, n):
-     # Create a min heap of size equal to number of machines
     min_heap = merge_lists(array)
 
     while min_heap:
@@ -2419,32 +2515,6 @@ def external_sort(array, n):
         print(data, end=" ")
         if node.next != None:
             heapq.heappush(min_heap, (node.next.data, node.next))
-
-if __name__ == '__main__':
-    N = 3  # Number of machines
-    array = [None] * N
-
-    # an array of pointers storing the head nodes of the linked lists
-    array[0] = None
-    array[0] = push(array[0], 50)
-    array[0] = push(array[0], 40)
-    array[0] = push(array[0], 30)
-
-    # Create a Linked List 35->45 for second machine
-    array[1] = None
-    array[1] = push(array[1], 45)
-    array[1] = push(array[1], 35)
-
-    # Create Linked List 10->60->70->80 for third machine
-
-    array[2] = None
-    array[2] = push(array[2], 100)
-    array[2] = push(array[2], 80)
-    array[2] = push(array[2], 70)
-    array[2] = push(array[2], 60)
-    array[2] = push(array[2], 10)
-
-    external_sort(array, N)
 ```
 
 
@@ -2457,7 +2527,7 @@ if __name__ == '__main__':
 def countBits(a):
     count = 0
     while (a):
-        if (a & 1 ):
+        if a & 1:
             count += 1
         a = a>>1
     return count
@@ -2512,6 +2582,32 @@ def minIncrements(arr):
 	
 	return cnt
 ```
+
+
+### 最小操作次数使得数组元素相等
+
+[453. 最小操作次数使数组元素相等 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-moves-to-equal-array-elements/description/)
+
+允许对数组中的n-1个数加1，求使所有元素相等时的最小操作次数
+
+直接求不好求，时间复杂度会很高，但是如果换一个方向，对 n-1 个数加1，可以转换为对 1 个数减1，这样就变成了每次操作对一个数减1，需要多少次操作，数组中的元素全部变为最小值
+
+```python
+def minMoves(nums) -> int:
+	minv = min(nums)
+	n = len(nums)
+	cnt = 0
+	
+	for i in range(n):
+		cnt += nums[i] - minv
+	
+	return cnt
+```
+
+还有等式可以计算，首先假设最后的目标值为 target，最后的总和为 `target * n`，为了找到最小操作次数，则每次都需要在最小值上加1，因此最小操作次数为 `target-minv`，每次操作会增加 n-1，所以最后有等式：`target*n - sum = (target - minv) * (n-1)`，即 `target = sum-(n-1)*minv`
+
+如果每次允许对一个元素加1或减1，那么使全部元素相等的最小操作次数便是将所有元素变成中位数。
+
 
 ### 火车到达的最少平台问题
 
