--- a/多媒体.md
+++ b/多媒体.md
@@ -1,4 +1,60 @@
 
+
+# 基本知识
+
+## 图像
+
+### IPB帧
+
+许多视频编码方案中包括了I-frame（关键帧）、P-frame（预测帧）和 B-frame（双向预测帧）。I-frame保存了整张图片，P-frame只保存当前图片和前一张图片的差别，B-frame则保存前一张或者后一张的差别。这三种帧构成了一个GOP（Group of pictures），GOP是一组连续的画面，由一张 I 帧和数张 B/P 帧组成，是视频图像编码器和解码器存取的基本单位。GOP越大，中间的P帧和B帧越多，解码出来的视频质量越高，但是会影响编码效率。
+
+
+### YUV
+
+YUV是一种颜色编码方式，Y是亮度，UV为色度。常见的有4: 4: 4，4:2:2 和 4:2:0。YUV不像RGB那样要求三个独立的视频信号同时传输，所以用YUV方式传送占用极少的频宽。
+
+YUV444意味着三个分量的采样比例相等，
+
+```text
+假如图像像素为：[Y0 U0 V0]、[Y1 U1 V1]、[Y2 U2 V2]、[Y3 U3 V3]
+
+那么采样的码流为：Y0 U0 V0 Y1 U1 V1 Y2 U2 V2 Y3 U3 V3 
+
+最后映射出的像素点依旧为 [Y0 U0 V0]、[Y1 U1 V1]、[Y2 U2 V2]、[Y3 U3 V3] 
+```
+
+YUV422意味着UV分量是Y分量的一半，Y 分量和 UV 分量按照 2 : 1 的比例采样。
+
+```text
+ 假如图像像素为：[Y0 U0 V0]、[Y1 U1 V1]、[Y2 U2 V2]、[Y3 U3 V3]
+
+ 那么采样的码流为：Y0 U0 Y1 V1 Y2 U2 Y3 V3 
+
+ 其中，每采样过一个像素点，都会采样其 Y 分量，而 U、V 分量就会间隔一个采集一个。
+
+ 最后映射出的像素点为 [Y0 U0 V1]、[Y1 U0 V1]、[Y2 U2 V3]、[Y3 U2 V3]
+```
+
+YUV420在每一行扫描时，只扫描一种色度分量（U 或者 V），和 Y 分量按照 2 : 1 的方式采样。
+
+```text
+假设图像像素为：
+ 
+[Y0 U0 V0]、[Y1 U1 V1]、 [Y2 U2 V2]、 [Y3 U3 V3]
+[Y5 U5 V5]、[Y6 U6 V6]、 [Y7 U7 V7] 、[Y8 U8 V8]
+ 
+那么采样的码流为：Y0 U0 Y1 Y2 U2 Y3 Y5 V5 Y6 Y7 V7 Y8
+ 
+其中，每采样过一个像素点，都会采样其 Y 分量，而 U、V 分量就会间隔一行按照 2 : 1 进行采样。
+ 
+最后映射出的像素点为：
+
+[Y0 U0 V5]、[Y1 U0 V5]、[Y2 U2 V7]、[Y3 U2 V7]
+[Y5 U0 V5]、[Y6 U0 V5]、[Y7 U2 V7]、[Y8 U2 V7]
+```
+
+
+
 # FFmpeg
 
 
@@ -336,7 +392,7 @@ e_cc->sample_rate = dst_rate;
 e_cc->sample_fmt = AV_SAMPLE_FMT_S16;
 ```
 
-还需要定义解码帧和数据包
+还需要定义编码帧和数据包
 
 ```c
 AVFrame* e_frame = av_frame_alloc();
