--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -27,6 +27,64 @@ def solve(num):
 ```
 
 
+### 快速幂算法
+
+[50. Pow(x, n) - 力扣（LeetCode）](https://leetcode.cn/problems/powx-n/description/)
+
+采用分治的思想，初始化结果 `res` 为 1，如果 n 为奇数，则需要 `res *= x`，否则 `x *= x`，并且 `n = n // 2`。相当于将 `a^b` 分成 `(a*a) ^ (b // 2)`
+
+```python
+def myPow(x: float, n: int) -> float:
+	flag = False
+	if n < 0:
+		flag = True
+		n = -n
+	res = 1
+	while n > 0:
+		if n & 1 == 1:
+		   res *= x
+		x *= x
+		n = n >> 1 
+
+	if flag: return 1 / res
+	return res
+```
+
+同理还有快速加算法
+
+```python
+def myAdd(x: float, n: int) -> float:
+	res = 0
+	while n > 0:
+		if n & 1 == 1:
+		   res += x
+		x += x
+		n = n >> 1 
+	return res
+```
+
+
+### 两数相除
+
+[29. 两数相除 - 力扣（LeetCode）](https://leetcode.cn/problems/divide-two-integers/description/)
+
+不使用乘法、除法和取余运算实现两数除法
+
+可以使用二分查找算法搜索结果，整数除法结果在 `[0, 2 ^ 31-1]` 之间。在这个区间内二分搜索，每次搜索到的结果 `mid` 使用快速加算法判断 `mid * divisor` 是否满足要求。
+
+除此之外还可以使用快速除算法，将 `a // b` 改为 `(a // (b + b)) * 2`，如果 a 和 b均为正数，计算如下
+
+```python
+def div(a, b):  # a 为被除数，b 为除数
+	if a < b: return 0
+	num = 1
+	tb = b
+	while tb + tb <= a:
+		tb += tb
+		num += num
+	return num + div(a-tb, b)
+```
+
 
 ### 判断质数
 
@@ -5102,6 +5160,49 @@ def solve_dp(arr, k):
 ```
 
 
+### 串联所有单词的子串
+
+[30. 串联所有单词的子串 - 力扣（LeetCode）](https://leetcode.cn/problems/substring-with-concatenation-of-all-words/)
+
+使用滑动窗口来解决这一问题，需要注意的是外侧循环只需要遍历与单词长度 `word_len` 相等的次数即可。因为在第一次循环的时候，就会检查第 `word_len` 个字符是否可以。
+
+在一次外侧循环中，会检查之后的字符串是否满足条件，
+
+```python
+def findSubstring(s, words):
+	word_len = len(words[0])
+	word_num = len(words)
+	n = len(s)
+	if n < word_len: return []
+	
+	words = Counter(words)
+	res = []
+	for i in range(0, word_len):
+		cur_cnt = 0
+		left = i
+		right = i
+		cur_Counter = Counter()
+		while right + word_len <= n:
+			w = s[right:right + word_len]
+			right += word_len
+			if w not in words:  # 如果当前单词不存在，就跳过这个单词
+				left = right
+				cur_Counter.clear()
+				cur_cnt = 0
+			else:          
+				cur_Counter[w] += 1
+				cur_cnt += 1
+				while cur_Counter[w] > words[w]: 
+				# 如果某个单词的数量太多，就删除最左侧的单词，直到不多
+					left_w = s[left:left+word_len]
+					left += word_len
+					cur_Counter[left_w] -= 1
+					cur_cnt -= 1
+				if cur_cnt == word_num:
+					res.append(left)
+	return res
+```
+
 
 
 
@@ -5725,6 +5826,7 @@ def solve(N):
                 # 如果需要打印所有的解法，这里可以不返回True
                 if  _solve(board, c+1):
                     return True
+                # _solve(board, c+1)  # 如果需要打印所有的解法
 	            
                 # 该位置不可行，删除
                 slashLookUp[slashCode[r][c]] = True
@@ -5739,6 +5841,47 @@ def solve(N):
 ### 数独问题
 
 [Algorithm to Solve Sudoku | Sudoku Solver - GeeksforGeeks](https://www.geeksforgeeks.org/sudoku-backtracking-7/)
+
+[37. 解数独 - 力扣（LeetCode）](https://leetcode.cn/problems/sudoku-solver/)
+
+采用回溯进行求解，用三个矩阵标记每行，每列和每个小方块是否包含了1-9这9个数字
+
+```python
+def solveSudoku(board: List[List[str]]) -> None:
+	n = 9
+	def solve(i, j):
+		if i == 8 and j == 9:
+			return True
+		
+		if j == 9:
+			i += 1
+			j = 0
+
+		if board[i][j] == ".":
+			for k in range(1, 10):
+				if row[i][k-1] == col[j][k-1] == block[i//3][j//3][k-1]==False:
+					row[i][k-1] = col[j][k-1] = block[i//3][j//3][k-1] = True
+					board[i][j] = str(k)
+					if solve(i, j+1):
+						return True
+					board[i][j] = "."
+					row[i][k-1] = col[j][k-1] = block[i//3][j//3][k-1] = False
+		else:
+			return solve(i, j+1)
+		
+		return False
+
+	row = [[False] * 9 for _ in range(9)]   # 标记行
+	col = [[False] * 9 for _ in range(9)]   # 标记列
+	block = [[[False] * 9 for _ in range(3)] for _ in range(3)]  # 标记 3x3 方块
+
+	for i in range(9):
+		for j in range(9):
+			if board[i][j] != ".":
+				k = int(board[i][j]) - 1
+				row[i][k] = col[j][k] = block[i//3][j//3][k] = True
+	solve(0, 0)
+```
 
 
 ### 国王旅行问题
@@ -12757,6 +12900,88 @@ def solve_dp(jobs):
 ### 正则表达式匹配
 
 [Regular Expression Matching - GeeksforGeeks](https://www.geeksforgeeks.org/implementing-regular-expression-matching/)
+
+[10. 正则表达式匹配 - 力扣（LeetCode）](https://leetcode.cn/problems/regular-expression-matching/description/)
+
+判断一个字符串是否满足一个模式
+
+令 `dp[i][j]` 表示`s[:i]` 和 `p[:j]` 之间是否能匹配。初始条件：两个字符串都为空能匹配。
+
+对于模式字符串，如果遇到 `*`，那么分为两种情况，一种是不匹配之前的字符，即判断 `s[:i]` 和 `p[:j-2]` 之间是否匹配：`dp[i][j] |= dp[i][j-2]`
+
+另一种情况是判断字符串是否和模式字符串之前的字符匹配：如果匹配有`dp[i][j] != dp[i-1][j]`
+
+如果遇到`.`，直接匹配下一个字符，`dp[i][j] |= dp[i-1][j-1]`
+
+如果遇到字母，判断两个字母是否相等，`dp[i][j] != dp[i-1][j-1]`
+
+```python
+def isMatch(s: str, p: str) -> bool:
+	m = len(s)
+	n = len(p)
+
+	dp = [[False for _ in range(n+1)] for _ in range(m+1)]
+	dp[0][0] = True  # 两个字符串为空
+
+	def match(i, j):
+		if i == 0:  # 如果 s 为空字符串，并且模式还需要匹配，则返回False
+			return False
+		if p[j-1] == ".":  # 如果字符为 . ，直接匹配
+			return True
+		return s[i-1] == p[j-1]
+
+	for i in range(m+1):
+		for j in range(1, n+1):
+			if p[j-1] == "*":
+				dp[i][j] |= dp[i][j-2]
+				if match(i, j-1):
+					dp[i][j] |= dp[i-1][j]
+			else:
+				if match(i, j):
+					dp[i][j] |= dp[i-1][j-1]
+	return dp[m][n]
+```
+
+
+另外一种变种问题：[44. 通配符匹配 - 力扣（LeetCode）](https://leetcode.cn/problems/wildcard-matching/description/)
+
+该问题中的 `*` 可以匹配任意子序列（包括空序列），在初始化的时候需要注意当模式字符串中前面若干个元素为 `*`时，`dp[0][j]` 为 True。
+
+若第 j 个元素为 `*` 时，则可以匹配空序列 `dp[i][j-1]`，或者匹配任意序列 `dp[i-1][j]`，即
+
+`dp[i][j] = dp[i][j-1] | dp[i-1][j]`
+
+```python
+def isMatch(s: str, p: str) -> bool:
+	m = len(s)
+	n = len(p)
+
+	dp = [[False for _ in range(n+1)] for _ in range(m+1)]
+
+	dp[0][0] = True
+
+	for j in range(1, n+1):
+		if p[j-1] == "*":
+			dp[0][j] = True
+		else:
+			break
+
+	def match(i, j):
+		if i == 0: return False
+		if p[j-1] == "?": return True
+		return s[i-1] == p[j-1]
+	last_i = 0
+	for i in range(m+1):
+		for j in range(1, n+1):
+			if p[j-1] == "*":
+				dp[i][j] = dp[i][j-1] | dp[i-1][j]
+			else:
+				if match(i, j):
+					dp[i][j] |= dp[i-1][j-1]
+	return dp[m][n]
+```
+
+
 
 
 ### 形成回文字符串的最小插入次数
