--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -9699,6 +9699,44 @@ def findKthNumber(n: int, k: int) -> int:
 ```
 
 
+该题还有排列序列的变种 [60. 排列序列 - 力扣（LeetCode）](https://leetcode.cn/problems/permutation-sequence/description/)
+
+该题是求 1 到 n 这 n 个数字全排列的第 k 个最小值，与求字典序的第k个最小值类似。首先先求固定前面若干位时的排列个数
+
+```python
+def getPermutation(n: int, k: int) -> str:
+	facts = [1]
+	i = 2
+	# 计算 1 到 n - 1 个数字的排列可能性
+	while i < n:
+		facts.append(facts[-1] * i)
+		i += 1
+	wait_for_choose = [str(i) for i in range(1, n+1)]
+	if k == 1:
+		return "".join([str(i) for i in range(1, n+1)])
+	
+	res = []
+	k -= 1
+	level = n - 2  # 初始为n-1个数字全排列
+	curr = 0
+	while k:
+		s = facts[level]
+		if s <= k:
+			k -= s
+			curr += 1
+		else:
+			a = wait_for_choose[curr]
+			res.append(a)
+			wait_for_choose.remove(a)
+			curr = 0
+			level -= 1
+	a = wait_for_choose[curr]
+	res.append(a)
+	wait_for_choose.remove(a)
+	res.extend(wait_for_choose)
+	return "".join(res)
+```
+
 
 ## 堆
 
